# collecty

./: .gitignore  INSTALL  Makefile  Makefile.am  README  TODO  autogen.sh  collecty-client  collecty.service  collectyd  configure.ac  example.conf
.tx/: config
collecty/: __init__.py  client.py  constants.py  daemon.py  ping.py
collecty/plugins/: __init__.py  base.py  cpu.py  entropy.py  interface.py  loadavg.py  memory.py
man/: collectyd.xml
po/: POTFILES.in  ar.po  ca.po  collecty.pot  cs_CZ.po  da.po  de.po  el_GR.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  jv.po  km_KH.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  rw.po  sk.po  sq.po  sr.po  su.po  sv.po  th.po  tk.po  tr.po  uk.po  uz@Latn.po  vi.po  zh.po
src/: _collectymodule.c  collecty-client  collectyd
src/_collecty/: _collectymodule.c  _collectymodule.h  blockdev.c  ping.c  sensors.c  utils.c
src/collecty/: __init__.py  __version__.py.in  bus.py  client.py  colours.py  constants.py  daemon.py  errors.py  i18n.py  locales.py  logger.py  ping.py  util.py
src/collecty/plugins/: __init__.py  base.py  conntrack.py  contextswitches.py  cpu.py  cpufreq.py  df.py  disk.py  entropy.py  interface.py  interrupts.py  ipfrag.py  latency.py  loadavg.py  memory.py  processor.py  sensors.py
src/dbus/: org.ipfire.collecty1.conf  org.ipfire.collecty1.service
src/scripts/: collecty  collectyd
src/systemd/: collecty.service.in  org.ipfire.collecty1.busname
